--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,17 @@ body {
   font-family: 'Manrope', sans-serif;
 }
 
+/* Hide spinners in number inputs */
+.no-spinners::-webkit-outer-spin-button,
+.no-spinners::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.no-spinners {
+  appearance: textfield; /* Standard */
+  -moz-appearance: textfield; /* Firefox */
+}
 
 
 @layer base {
